Fixed more spacing

--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@ body {
 	text-align: center;
 	width: 100%;
 	float: right;
-	padding: 10vh 6vw;
+	padding: 20vh 6vw;
 }
 
 .goal {
@@ -257,13 +257,14 @@ body {
 	color: #195a09;
 	text-align: center;
 	margin-bottom: 1vw;
+	margin-top: 3vw;
 }
 
 .teamContainer {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	gap: 2vw 10vw;
-	padding: 0 6vw;
+	padding: 3vw 6vw;
 	width: 80%;
 }
 .teamMember {
